src/test/resources/invalid_tests/UndefinedOutput.cnna
architecture UndefinedOutput{
    def input in

    in ->
    fullyConnected(units=64, no_bias=true)
    activation.tanh()
    output {
        fullyConnected(no_bias=true)
        activation.softmax()
    } -> out
}